@@ -23,7 +23,7 @@ PROJECT_NAME           = FastBit
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = b0.9.3
+PROJECT_NUMBER         = b0.9.4
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
